UI improvements, client-server comms w/ AJAX

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="css/pgandjqm-style-override.css" type="text/css" />
 <link rel="stylesheet" href="css/custom.css" type="text/css" />
 <script type="text/javascript" charset="utf-8" src="jquery.mobile/jquery-1.7.1.min"></script>
-<!-- <script type="text/javascript" charset="utf-8" src="js/main.js"></script> -->
 <script type="text/javascript" charset="utf-8">
 	$(document).bind("mobileinit", function() {
 		// Make your jQuery Mobile framework configuration changes here!
@@ -19,7 +18,6 @@
 </script>
 <script type="text/javascript" charset="utf-8" src="jquery.mobile/jquery.mobile-1.1.0-rc.1.min"></script>
 <script type="text/javascript" charset="utf-8" src="js/phonegap-1.4.1.js"></script>
-<script type="text/javascript" charset="utf-8" src="js/infrontof.js"></script>
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHwAJbB8jkEMvSkZpGBDxSB1fK5MpGfNQ&sensor=false"></script>
 <script type="text/javascript" charset="utf-8" src="js/custom.js"></script>
 </head>
@@ -44,7 +42,7 @@
 
 <div data-role="navbar" class="ui-body-a" data-mini="true">
 <ul>
-<LI><A HREF="#broadcaster" class="ui-btn-active" data-theme="e">Broadcast Now!</A></LI>
+<LI><A HREF="#broadcaster" class="ui-btn-active broadcastButton" data-theme="e">Broadcast Now!</A></LI>
 <li><a href="#streams" ID="link_viewer" data-theme="e">View Streams</a></li>
 </ul>
 </div> <!-- /navbar -->
@@ -52,19 +50,24 @@
 </DIV> <!-- /header -->
 
 		<div data-role="content" data-theme="a">
+		<BR />
 			<!--  insert external div -->
 			<div id="lastUpdate"></div><BR />
 
-			<center><div id="geolocation" STYLE="text-align: center; margin: auto; display: inline;">Finding geolocation...</div></center>
+			<div id="geolocation" STYLE="text-align: center; margin: auto;">Finding geolocation...</div>
 			
-			<FORM NAME="updateForm" ID="updateForm" data-ajax="false" enctype="multipart/form-data" METHOD="post" ACTION="http://benturner.com/streeteyes/statusupdate.php">
+			<FORM NAME="updateForm" ID="updateForm" METHOD="get" ACTION="http://benturner.com/streeteyes/statusupdate.php">
 			<input type="hidden" name="updatePhoto" id="updatePhoto" VALUE="" />
+			<input type="hidden" name="updateGeoLat" id="updateGeoLat" VALUE="" />
+			<input type="hidden" name="updateGeoLon" id="updateGeoLon" VALUE="" />
 			<input type="hidden" name="updateBroadcast" id="updateBroadcast" VALUE="true" />
-			<div data-role="fieldcontain">
+			<input type="hidden" name="updateNick" id="updateNick" value="Ben" />
 			
-			<label class="labelInput">
-			<span>What are you seeing?</span><input type="text" name="updateStatus" id="updateStatus" data-theme="a" value="" />
-			</label>
+			<div data-role="fieldcontain">
+			<input type="text" placeholder="What are you seeing?" name="updateStatus" id="updateStatus" data-theme="a" value="" />
+			</div>
+			<BR />
+			<!--
 			<BR />
 			<label class="labelInput">
 			<span>Your Ustream URL:</span><input type="text" name="updateUstream" id="updateUstream" data-theme="a" value="" />
@@ -74,19 +77,17 @@
 			<button onclick="capturePhoto();" class="camera" data-mini="true">Capture Photo</button>
 					<button onclick="getPhoto(pictureSource.PHOTOLIBRARY);"
 						class="camera" data-mini="true">Gallery</button>
-					<!-- <button onclick="capturePhotoEdit();" class="camera">Capture
+					<button onclick="capturePhotoEdit();" class="camera">Capture
 						Editable Photo</button>
 					<button onclick="getPhoto(pictureSource.SAVEDPHOTOALBUM);"
-						class="camera">From Photo Album</button> -->
+						class="camera">From Photo Album</button>
 						<img style="display: none; width: 60px; height: 60px;" id="smallImage"
 					src="" /> <img style="display: none;" id="largeImage" src="" /><BR />
 				</small>
-			</div>
+			</div> -->
 
 			<CENTER>
-				<a href="" data-role="button" ID="statusUpdate" data-ajax="false"
-					CLASS="updateButton" data-inline="true"
-					data-theme="b">send update</a>
+				<a href="" data-role="button" ID="statusUpdate" data-ajax="false" CLASS="updateButton" data-inline="true" data-theme="b">send update</a>
 			</CENTER>
 			
 			</FORM>
@@ -123,8 +124,7 @@
 
 			<div data-role="navbar" class="ui-body-a" data-mini="true">
 				<ul>
-					<LI><A HREF="#broadcaster"
-						data-theme="e">Broadcast Now!</A></LI>
+					<LI><A HREF="#broadcaster" class="broadcastButton" data-theme="e">Broadcast Now!</A></LI>
 					<li><a href="#streams" ID="link_viewer" data-theme="e" class="ui-btn-active">View Streams</a></li>
 				</ul>
 			</div>
@@ -204,7 +204,7 @@ Your nick/handle/name:<BR />
 
 			<div data-role="navbar" class="ui-body-a" data-mini="true">
 				<ul>
-					<LI><A HREF="#broadcaster" data-theme="e">Broadcast Now!</A></LI>
+					<LI><A HREF="#broadcaster" data-theme="e" class="broadcastButton">Broadcast Now!</A></LI>
 					<li><a href="#streams" ID="link_viewer" data-theme="e">View Streams</a></li>
 				</ul>
 			</div>
@@ -215,20 +215,13 @@ Your nick/handle/name:<BR />
 
 		<div data-role="content">
 
-<FORM METHOD="get" ACTION="" NAME="formProfile" ID="formProfile">
+			<FORM METHOD="get" ACTION="" NAME="formProfile" ID="formProfile">
 			<BR /><H3>YOUR PROFILE</H3>
 			<BR />
-			<label class="labelInput">
-			<span>Your real name/pseudonym?</span><input type="text" name="profileName" id="profileName" data-theme="a" value="" />
-			</label>
-			
+			<input type="text" placeholder="Your name?" name="profileName" id="profileName" data-theme="a" value="" />
 			<BR />
-			
-			<label class="labelInput">
-			<span>Your bio?</span><textarea name="profileBio" id="profileBio" data-theme="a" rows=3
-				cols=30></textarea>
-			</label>
-
+			<textarea name="profileBio" placeholder="Your bio?" id="profileBio" data-theme="a" rows=3 cols=30></textarea>
+<!--
 			<div data-role="fieldcontain">
 				<legend>App Settings</legend>
 				<fieldset data-role="controlgroup">
@@ -242,6 +235,7 @@ Your nick/handle/name:<BR />
 					<label for="checkbox-4a">Recorded video</label>
 				</fieldset>
 			</div>
+-->
 
 			<CENTER>
 				<a href="buttons-types.html" data-role="button"
@@ -260,7 +254,7 @@ Your nick/handle/name:<BR />
 
 
 
-	<div data-role="page" id="search" data-theme="a">
+	<div data-role="page" id="search" data-theme="a" style="width: 100%; height: 100%;">
 
 		<DIV data-role="header" data-theme="a" data-position="fixed">
 
@@ -279,7 +273,7 @@ Your nick/handle/name:<BR />
 
 			<div data-role="navbar" class="ui-body-a" data-mini="true">
 				<ul>
-					<LI><A HREF="#broadcaster" data-theme="e">Broadcast Now!</A></LI>
+					<LI><A HREF="#broadcaster" data-theme="e" class="broadcastButton">Broadcast Now!</A></LI>
 					<li><a href="#streams" ID="link_viewer" data-theme="e">View Streams</a></li>
 				</ul>
 			</div>
@@ -288,27 +282,25 @@ Your nick/handle/name:<BR />
 		</DIV>
 		<!-- /header -->
 
-		<div data-role="content">
+		<div data-role="content" STYLE="width: 90%; height: 100%;">
 
-			<BR /><FORM NAME="viewForm" ID="viewForm" METHOD="post"
-				ACTION="http://benturner.com/streeteyes/newviewrequest.php">
+			<BR />
 				<H3>Location of Active Eyes</H3><BR />
 				<div id="map_canvas" style="width: 90%; height: 250px"></div>
-				<BR />
+				<BR /><!--
 				<label class="labelInput"><span>Change location?</span><input type="search" name="viewLocation" id="viewLocation" data-theme="a" value="" /></label>
 				<a href="#search"
 						data-role="button" data-transition="fade" CLASS="updateButton"
 						data-inline="true" data-theme="a" STYLE="font-size: 8pt;">look
 						up location</a> 
-						<BR /><BR />
-				<label class="labelInput">
-			<span>Request broadcast from which user?</span><input type="text" name="viewUser" id="viewUser" data-theme="a" value="" />
-			</label>
+						<BR /><BR /> -->
+			<FORM NAME="viewForm" ID="viewForm" METHOD="post" ACTION="http://benturner.com/streeteyes/newviewrequest.php">
+			<input type="text" name="viewWhat" id="viewWhat" value="" data-role="text" placeholder="What do you want to see?" class="text ui-widget-content ui-corner-all" />
 			<BR />
-
-			<label class="labelInput">
-			<span>What do you want to get eyes on?</span><input type="text" name="viewWhat" id="viewWhat" data-theme="a" value="" />
-			</label>
+			
+			<TEXTAREA name="viewInstructions" id="viewInstructions" data-role="text" COLS=25 ROWS=3 placeholder="Detailed instructions?" class="text ui-widget-content ui-corner-all"></TEXTAREA>
+			<BR /><BR />
+			<!--
 			<BR />
 				<div data-role="fieldcontain">
 					What multimedia do you want broadcasted?
@@ -321,28 +313,30 @@ Your nick/handle/name:<BR />
 							class="custom" /> <label for="viewMedia3">Photos</label> <input
 							type="checkbox" name="viewMedia" id="viewMedia4" class="custom" />
 						<label for="viewMedia4">Recorded video</label>
-					</fieldset>
+					</fieldset> -->
+					
+					<input type="text" name="viewUser" id="viewUser" data-role="text" value="" placeholder="Send request to:" class="text ui-widget-content ui-corner-all" />
+				<BR />
 
 				<CENTER>
 					<INPUT type="submit" id="newViewRequest" data-role="button"
-						data-transition="fade" CLASS="updateButton" data-inline="true"
+						CLASS="updateButton" data-inline="true"
 						data-theme="b" VALUE="send request" />
 						<DIV ID="sentRequest"></DIV>
 				</CENTER>
-				
-				</div>
 
 			</FORM>
-
+<!--
 <H3>Search Events</H3>
 <BR />
 
 <div data-role="fieldcontain">
 <input type="search" name="password" id="search" value="" /><BR />			
 <CENTER><input type="submit" value="search" data-theme="b" data-inline="true" /></CENTER>
-</div> <!-- /fieldcontain -->
+</div>
+-->
 
-</DIV> <!-- end content-page -->
+</DIV> <!-- /content -->
 
 </div> <!-- /page -->
 
@@ -351,6 +345,8 @@ Your nick/handle/name:<BR />
 
 $(function() {
 	init();
+	$("button").button();
+	$(".button").button();
 	$(".link_search").click(function(){
 		navigator.geolocation.getCurrentPosition(onSuccessWatch, onError, {timeout:10000});
 	});
@@ -358,11 +354,13 @@ $(function() {
 		$("#requests").css('display', 'block');
 		$("#active").css('display', 'none');
 		$("#public").css('display', 'none');
+		$("#requestsDiv").load("http://benturner.com/streeteyes/requests.php");
 	});
 	$("#buttonActive").click(function() {
 		$("#requests").css('display', 'none');
 		$("#active").css('display', 'block');
 		$("#public").css('display', 'none');
+		$("#streamContainer").load("http://benturner.com/streeteyes/stream.php");
 	});
 	$("#buttonPublic").click(function() {
 		$("#requests").css('display', 'none');
@@ -381,24 +379,28 @@ $(function() {
 		
 		return false;
 	});
+	$(".broadcastButton").click(function() {
+		$("#lastUpdate").load("http://benturner.com/streeteyes/lastupdate.php");
+	});
+	
 	$("#statusUpdate").click(function() {
 		console.log("click fired");
-		var dataString = 'updateStatus=' + $("input#updateStatus").val() + '&updateUstream=' + $("input#updateUstream").val()
+		/*var dataString = 'updateStatus=' + $("input#updateStatus").val() + '&updateUstream=' + $("input#updateUstream").val()
 		+ '&updatePhoto=' + $("input#updatePhoto").val() + '&updateGeoLat=' + $("input#updateGeoLat").val() +
 		'&updateGeoLon=' + $("input#updateGeoLon") + '&updateBroadcast=' + $("#updateBroadcast").val();
 		$.mobile.loadPage("http://benturner.com/streeteyes/statusupdate.php?" + dataString, {
 	        reloadPage : true
-	    }); 
-			$("#sentSU").html("<CENTER>Update sent.</CENTER>");
-			/* $.ajax({  
+	    });*/
+		$.ajax({  
   				type: "POST",  
   				cache: false,
   				url: "http://benturner.com/streeteyes/statusupdate.php",  
-  				data: dataString,
+  				data: $("#updateForm").serialize(),
   				success: function() {   
-  	  				$("#sentSU").html("Update sent.");
+  	  				$("#sentSU").html("<BR /><CENTER>Update sent.</CENTER>");
+  	  				$("#lastUpdate").load("http://benturner.com/streeteyes/lastupdate.php");
   				}
-			}); */
+			});
 		
 		return false;
 	});
@@ -406,11 +408,11 @@ $(function() {
 		console.log("click fired");
 		var dataString = 'streamID=' + $("input#chatID").val() + '&chatNick=' + $("input#chatNick").val() + '&chatMsg='
 		+ $("input#chatMsg").val() + '&updateBroadcast=false';
-		$.mobile.loadPage("http://benturner.com/streeteyes/sendchat.php?" + dataString, {
+		$.mobile.loadPage("http://benturner.com/streeteyes/sendchat_mobile.php?" + dataString, {
         	reloadPage : true
         }); 
-		//$("#streamList").load("http://benturner.com/streeteyes/streams_mobile.php");
 		$("#streamContainer").load("http://benturner.com/streeteyes/stream.php");
+		//$("#streamList").load("http://benturner.com/streeteyes/streams_mobile.php");
 		/* $.ajax({  
   			type: "POST", 
   			cache: false,
